<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image_franchisors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgFranchisors"
            android:padding="8dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/franchisor_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/franchise_cost"
            android:textSize="16sp"
            android:textColor="@color/maroon"
            android:textStyle="bold"
            card_view:layout_constraintStart_toStartOf="@+id/image_franchisors"
            card_view:layout_constraintTop_toBottomOf="@+id/image_franchisors" />

        <TextView
            android:id="@+id/franchisename_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:text="@string/franchise_name"
            android:textSize="14sp"
            card_view:layout_constraintStart_toStartOf="@+id/franchisor_cost"
            card_view:layout_constraintTop_toBottomOf="@+id/franchisor_cost" />

        <TextView
            android:id="@+id/tanggal_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/tanggal"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/franchisename_txt"
            card_view:layout_constraintTop_toBottomOf="@+id/franchisename_txt" />

        <TextView
            android:id="@+id/locationfranchise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locationtxt"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/light_maroon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>